# MCpp

./: .gitignore  CMakeLists.txt  README.md
include/: Types.h
include/core/: Vec3.h  Vec3i.h
include/entity/: Entity.h  LivingEntity.h
include/io/: ByteBuffer.h  ReadOnlyByteBuffer.h  VariableSizeByteBuffer.h
include/network/: ConnectionProtocol.h
include/network/packet/: Packet.h  PacketFlow.h
include/network/packet/handshake/: CIntentionPacket.h
include/network/packet/status/: CPingRequestPacket.h  CStatusRequestPacket.h  SPongResponsePacket.h
src/core/: Vec3.cpp  Vec3i.cpp
src/entity/: LivingEntity.cpp
src/io/: ByteBuffer.cpp  ReadOnlyByteBuffer.cpp  VariableSizeByteBuffer.cpp
src/network/: ConnectionProtocol.cpp
src/network/packet/handshake/: CIntentionPacket.cpp
src/network/packet/status/: CPingRequestPacket.cpp  CStatusRequestPacket.cpp  SPongResponsePacket.cpp
